Fix text alignment of image captions

--- a/src/scss/Home.scss
+++ b/src/scss/Home.scss
@@ -35,9 +35,16 @@
 .img-row {
   display: flex;
   flex-direction: row;
+  align-items: center;
   justify-content: center !important;
   width: 100%;
+  div > p {
+    text-align: center;
+  }
   * {
+    width: 100%;
+  }
+  & > * {
     width: 45%;
     margin: 0.5rem !important;
   }
